# doreg

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
doreg/: __main__.py  arg_parser.py  argparser.py  cli.py  registry.py  version.py
