[metadata]
name = doreg
description = A docker registry command line and utility
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/doreg
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    doreg = doreg.__main__:main


